--- a/Core/Core.DAL.StoreRepo/Core.DAL.Repos.csproj
+++ b/Core/Core.DAL.StoreRepo/Core.DAL.Repos.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{88A9DF96-FE76-4006-8F81-47237F37781E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Core.DAL.StoreRepo</RootNamespace>
-    <AssemblyName>Core.DAL.StoreRepo</AssemblyName>
+    <RootNamespace>Core.DAL.Repos</RootNamespace>
+    <AssemblyName>Core.DAL.Repos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\_Builds\debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -41,17 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Companies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stores.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core.Database2\Core.Database2.csproj">
+    <ProjectReference Include="..\Core.Database2\Core.Database.csproj">
       <Project>{a5f0c836-0b7e-4ec3-99db-918d198ea685}</Project>
-      <Name>Core.Database2</Name>
+      <Name>Core.Database</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Core.Objects2\Core.Objects2.csproj">
+    <ProjectReference Include="..\Core.Objects2\Core.Objects.csproj">
       <Project>{e3e7e1bc-abba-402d-8601-842a0105605c}</Project>
-      <Name>Core.Objects2</Name>
+      <Name>Core.Objects</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
